--- a/src/index.scss
+++ b/src/index.scss
@@ -1,4 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap');
+@import "~slick-carousel/slick/slick.css";
+@import "~slick-carousel/slick/slick-theme.css";
+
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
 
 body {
   margin: 0;
@@ -12,3 +20,21 @@ body {
 ul li {
   list-style-type: none;
 }
+
+.slick-list {
+  overflow: visible;
+}
+
+.slick-track {
+  display: flex;
+  align-items: center;
+}
+
+.slick-slide {
+  width: 18% !important;
+}
+
+//.slick-active.slick-center.slick-current {
+//  margin-right: 1%;
+//  margin-left: 10px;
+//}
